[package]
name = "yulc"
version = "0.1.0"
edition = "2021"
authors = ["Yulvon Team"]
description = "Yulvon: The fastest programming language in the world."
license = "MIT"

[dependencies]
logos = "0.13"
lalrpop = { version = "0.20", features = ["lexer"] }
inkwell = "0.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
